data/apps/argocd/nifi/support/nifi-argocd.yaml
#   1. Application: nifikop operator
#   2. Application: zookeeper
#   3. Application: nifi-cluster
#   4. The manifests that git path should contain:
#        - Namespace
#        - NifiCluster CR
#        - HTTPRoute
---
apiVersion: v1
kind: Namespace
metadata:
  name: nifi
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nifi
  namespace: nifi
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "nifi.xxx.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nifi-cluster-ip
          port: 8080
